kubernetes/apps/kube-system/cilium-policies/app/allow-kube-apiserver.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kube-apiserver
spec:
  description: "Allow ingress from kube-apiserver and host for webhooks and health probes"
  endpointSelector:
    matchExpressions:
      - key: io.kubernetes.pod.namespace
        operator: NotIn
        values:
          - kube-system
          - cert-manager
          - external-secrets
          - rook-ceph
          - volsync-system
          - system-upgrade
  ingress:
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
