kubernetes/apps/kube-system/cilium-policies/app/default-deny-ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  description: "Default deny all ingress traffic for app namespaces"
  endpointSelector:
    matchExpressions:
      - key: io.kubernetes.pod.namespace
        operator: NotIn
        values:
          - kube-system
          - cert-manager
          - external-secrets
          - rook-ceph
          - openebs-system
          - volsync-system
          - system-upgrade
  ingress: []
